# szm-aistudy

./: .env.sample  .gitignore  README.md  pyproject.toml
agent/: rag_pipeline.py
database/: mock_db.py
tests/: test_milestone1.py  test_milestone2.py
tools/: hr_tools.py
