[project]
name = "szm-aistudy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "dashscope>=1.26.3",
    "dotenv>=0.9.9",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.4",
    "langchain-redis>=0.2.5",
    "langgraph>=1.2.8",
    "modelscope>=1.38.1",
    "notebook>=7.6.0",
    "pillow>=12.3.0",
    "pytest>=9.1.1",
    "rank-bm25>=0.2.2",
    "redis>=7.4.1",
    "sentence-transformers>=5.6.0",
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
